fixed buttons from overlap

--- a/src/components/demo-page/style.css
+++ b/src/components/demo-page/style.css
@@ -38,6 +38,7 @@ body{
 }
 .buttons{
   margin-right: 10px;
+  margin-top: 50px;
 }
 .dropdown1 {
   width: 100px;
